fixed text alignments on design page

--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ canvas {
     z-index:-10;
 }
 p {
-    max-width: 600px;
+    max-width: 650px;
     text-align: justify;
 }
 img {
